Refactor Kafka Board: Remove ClusterController, Introduce Kafka Services and User Management
- Deleted ClusterController.java and moved its functionality to dedicated Kafka services: KafkaClusterHealthService, KafkaConsumerGroupService, KafkaTopicService, and KafkaTopicMessageService.
- Added new exception classes: ConflictException, ForbiddenException, and ResourceNotFoundException for better error handling.
- Implemented KafkaAdminClientFactory for managing Kafka AdminClient instances.
- Created UserEntity and UserRepository for user management.
- Updated application properties for PostgreSQL database configuration and added Flyway migration scripts.
- Removed outdated integration tests for ClusterController and replaced them with new service-oriented tests.
- Added H2 database configuration for testing purposes.